preparing some files

--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/haloivanid/bookstoreAPI/issues"
   },
-  "homepage": "https://github.com/haloivanid/bookstoreAPI#readme"
+  "homepage": "https://github.com/haloivanid/bookstoreAPI#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "lowdb": "^1.0.0"
+  }
 }
