--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "hyperid": "^2.0.5",
     "lowdb": "^1.0.0"
   }
 }
